Inserting tags for configurations, packages and dev-env and visual studio code info

--- a/local.yaml
+++ b/local.yaml
@@ -9,4 +9,6 @@
     - include: tasks/git.yaml
     - include: tasks/hybris.yaml
     - include: tasks/terminator.yaml
+    - include: tasks/packages.yaml
+    - include: tasks/visual-studio-code.yaml
 
