--- a/tasks/terminator.yaml
+++ b/tasks/terminator.yaml
@@ -1,8 +1,12 @@
 - name: Install terminator
+  tags:
+    - packages
   become_user: root
   dnf:
     name: terminator
     state: latest
 
 - name: Copy terminator config folder
+  tags:
+    - configurations
   command: cp -r tasks/configs/terminator ~/.config/
