Inserting cinnamon and nemo dconf configurations

--- a/local.yaml
+++ b/local.yaml
@@ -11,4 +11,5 @@
     - include: tasks/terminator.yaml
     - include: tasks/packages.yaml
     - include: tasks/visual-studio-code.yaml
+    - include: tasks/desktop.yaml
 
