--- a/tasks/visual-studio-code.yaml
+++ b/tasks/visual-studio-code.yaml
@@ -17,3 +17,28 @@
   dnf:
     name: code
     state: latest
+
+- name: Install vscode extensions
+  tags:
+    - vscode
+  command: code --install-extension {{ item }}
+  with_items:
+    - dbaeumer.vscode-eslint
+    - eamodio.gitlens
+    - k--kato.intellij-idea-keybindings
+    - ms-azuretools.vscode-docker
+    - ms-python.python
+    - ms-vscode.Go
+    - mtxr.sqltools
+    - pthorsson.vscode-jsp
+    - redhat.java
+    - redhat.vscode-xml
+    - simplyRoba.impex-support
+    - TomiTurtiainen.rf-intellisense
+    - VisualStudioExptTeam.vscodeintellicode
+    - vscjava.vscode-java-debug
+    - vscjava.vscode-java-dependency
+    - vscjava.vscode-java-pack
+    - vscjava.vscode-java-test
+    - vscjava.vscode-maven
+    - vscoss.vscode-ansible
