--- a/local.yaml
+++ b/local.yaml
@@ -14,4 +14,5 @@
     - include: tasks/visual-studio-code.yaml
     - include: tasks/golang.yaml
     - include: tasks/kubectl.yaml
+    - include: tasks/docker.yaml
 
