--- a/tasks/git.yaml
+++ b/tasks/git.yaml
@@ -19,7 +19,7 @@
       }
       export PS1="\u@\h \[\033[32m\]\w\[\033[33m\]\$(parse_git_branch)\[\033[00m\] $ "
       alias gStatus="git status"
-      alias gD="git diff"
+      alias gd="git diff"
       alias gPullPrune="git fetch origin -p && git pull --rebase"
       alias gACommit="git add . && git commit -m $1"
       alias gCommit="git commit -m $1"
