--- a/tasks/visual-studio-code.yaml
+++ b/tasks/visual-studio-code.yaml
@@ -1,18 +1,21 @@
 - name: Install vscode key
   tags:
     - dev-env
+    - vscode
   become_user: root
   shell: rpm --import https://packages.microsoft.com/keys/microsoft.asc
 
 - name: Install vscode repo
   tags:
     - dev-env
+    - vscode
   become_user: root
   shell: sh -c 'echo -e "[code]\nname=Visual Studio Code\nbaseurl=https://packages.microsoft.com/yumrepos/vscode\nenabled=1\ngpgcheck=1\ngpgkey=https://packages.microsoft.com/keys/microsoft.asc" > /etc/yum.repos.d/vscode.repo'
 
 - name: Install vscode
   tags:
     - dev-env
+    - vscode
   become_user: root
   dnf:
     name: code
@@ -27,17 +30,11 @@
     - eamodio.gitlens
     - k--kato.intellij-idea-keybindings
     - ms-azuretools.vscode-docker
-    - ms-python.python
-    - mtxr.sqltools
-    - pthorsson.vscode-jsp
     - redhat.java
     - redhat.vscode-xml
-    - simplyRoba.impex-support
-    - TomiTurtiainen.rf-intellisense
     - VisualStudioExptTeam.vscodeintellicode
     - vscjava.vscode-java-debug
     - vscjava.vscode-java-dependency
     - vscjava.vscode-java-pack
     - vscjava.vscode-java-test
     - vscjava.vscode-maven
-    - vscoss.vscode-ansible
