Updating alacritty config

--- a/configs/alacritty/alacritty.toml
+++ b/configs/alacritty/alacritty.toml
@@ -1,6 +1,6 @@
 [general]
 import = [
-    "~/.config/alacritty/themes/themes/seoul256-light.toml"
+    "~/.config/alacritty/themes/themes/alabaster.toml"
 ]
 
 [window]
@@ -10,3 +10,7 @@ startup_mode = "Maximized"
 
 [font]
 size = 10
+
+[terminal.shell]
+program = "zellij"
+args = ["--layout", "compact"]
